force-app/main/default/objects/Opportunity/fields/CA_prevu__c.field-meta.xml
<CustomField>
    <fullName>CA_prevu__c</fullName>
    <formula>CA_prevu_des_frais_nationaux__c  +  CA_prevu_des_frais_internationaux__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA prévu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>