force-app/main/default/objects/Opportunity/fields/CA_prevu_des_frais_nationaux__c.field-meta.xml
<CustomField>
    <fullName>CA_prevu_des_frais_nationaux__c</fullName>
    <label>CA prévu des frais nationaux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>