force-app/main/default/objects/Opportunity/fields/CA_realise__c.field-meta.xml
<CustomField>
    <fullName>CA_realise__c</fullName>
    <formula>CA_realisees_des_frais_internationaux__c  +  CA_realisees_des_frais_nationaux__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA réalisé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>