force-app/main/default/objects/Opportunity/fields/CA_realisees_des_frais_internationaux__c.field-meta.xml
<CustomField>
    <fullName>CA_realisees_des_frais_internationaux__c</fullName>
    <label>CA réalisées des frais internationaux</label>
    <summarizedField>Cotation__c.Total_des_frais_internationaux__c</summarizedField>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>