force-app/main/default/objects/Opportunity/fields/Date_de_concretisation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_concretisation__c</fullName>
    <label>Date de concrétisation</label>
    <type>Date</type>
</CustomField>