force-app/main/default/objects/Opportunity/fields/Duree_de_vie_l_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_vie_l_opportunite__c</fullName>
    <formula>CloseDate - Date_de_concretisation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de vie l&apos;opportunité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>