force-app/main/default/objects/Opportunity/fields/Fret_Aerien__c.field-meta.xml
<CustomField>
    <fullName>Fret_Aerien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fret Aérien</label>
    <type>Checkbox</type>
</CustomField>