force-app/main/default/objects/Opportunity/fields/Fret_Maritime__c.field-meta.xml
<CustomField>
    <fullName>Fret_Maritime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fret Maritime</label>
    <type>Checkbox</type>
</CustomField>