force-app/main/default/objects/Opportunity/fields/Fret_Routier__c.field-meta.xml
<CustomField>
    <fullName>Fret_Routier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fret Routier</label>
    <type>Checkbox</type>
</CustomField>