force-app/main/default/objects/Opportunity/fields/is_Owner_or_Manager__c.field-meta.xml
<CustomField>
    <fullName>is_Owner_or_Manager__c</fullName>
    <formula>OR(
    $User.Id = OwnerId, 
    CONTAINS($UserRole.Name, &quot;Manager&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Owner or Manager</label>
    <type>Checkbox</type>
</CustomField>