force-app/main/default/objects/Opportunity/fields/Logistique__c.field-meta.xml
<CustomField>
    <fullName>Logistique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logistique</label>
    <type>Checkbox</type>
</CustomField>