force-app/main/default/objects/Opportunity/fields/Motif_de_perte__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_perte__c</fullName>
    <label>Motif de perte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Non faisabilité</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Service non disponible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>