force-app/main/default/objects/Opportunity/fields/Nombre_de_cotation_approuvees__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotation_approuvees__c</fullName>
    <label>Nombre de cotation approuvées</label>
    <summaryFilterItems>
        <field>Cotation__c.Statut_d_approbation__c</field>
        <operation>equals</operation>
        <value>Approuvé</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>