force-app/main/default/objects/Opportunity/fields/Nombre_de_cotation_avec_Bon_pour_accord__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotation_avec_Bon_pour_accord__c</fullName>
    <label>Nombre de cotation avec Bon pour accord</label>
    <summaryFilterItems>
        <field>Cotation__c.Etape__c</field>
        <operation>equals</operation>
        <value>Bon pour accord</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>