force-app/main/default/objects/Opportunity/fields/Nombre_de_cotation_en_Nego__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotation_en_Nego__c</fullName>
    <label>Nombre de cotation en Nego</label>
    <summaryFilterItems>
        <field>Cotation__c.Etape__c</field>
        <operation>equals</operation>
        <value>Négociation</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>