force-app/main/default/objects/Opportunity/fields/Nombre_de_cotations__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotations__c</fullName>
    <label>Nombre de cotations</label>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>