force-app/main/default/objects/Opportunity/fields/Nombre_de_cotations_actives__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotations_actives__c</fullName>
    <label>Nombre de cotations actives</label>
    <summaryFilterItems>
        <field>Cotation__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>