force-app/main/default/objects/Opportunity/fields/Nombre_de_cotations_cl_tur_es_gagn_es__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotations_cl_tur_es_gagn_es__c</fullName>
    <label>Nombre de cotations clôturées gagnées</label>
    <summaryFilterItems>
        <field>Cotation__c.Etape__c</field>
        <operation>equals</operation>
        <value>Cloturée Gagnée</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>