force-app/main/default/objects/Opportunity/fields/Nombre_de_cotations_en_cours_d_approba__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotations_en_cours_d_approba__c</fullName>
    <label>Nombre de cotations en cours d&apos;approba</label>
    <summaryFilterItems>
        <field>Cotation__c.Statut_d_approbation__c</field>
        <operation>equals</operation>
        <value>En cours d’approbation</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>