force-app/main/default/objects/Opportunity/fields/Nombre_de_cotations_inactives_ou_annulee__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_cotations_inactives_ou_annulee__c</fullName>
    <label>Nombre de cotations inactives ou annulée</label>
    <summaryFilterItems>
        <field>Cotation__c.Active__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Cotation__c.Etape__c</field>
        <operation>equals</operation>
        <value>Cloturée Perdue</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotation__c.Opportunite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>