force-app/main/default/objects/Opportunity/fields/Nombre_de_dossier_transit__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_dossier_transit__c</fullName>
    <label>Nombre de dossier transit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>