force-app/main/default/objects/Opportunity/fields/Poids_Prevu__c.field-meta.xml
<CustomField>
    <fullName>Poids_Prevu__c</fullName>
    <label>Poids Prévu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>