force-app/main/default/objects/Opportunity/fields/Tech_Service_Transit_Ou_Logistique__c.field-meta.xml
<CustomField>
    <fullName>Tech_Service_Transit_Ou_Logistique__c</fullName>
    <formula>OR(
    INCLUDES(Type_de_service__c, &quot;Transit&quot;),
    INCLUDES(Type_de_service__c, &quot;Logistique&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Service Transit Ou Logistique</label>
    <type>Checkbox</type>
</CustomField>