force-app/main/default/objects/Opportunity/fields/Transit__c.field-meta.xml
<CustomField>
    <fullName>Transit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transit</label>
    <type>Checkbox</type>
</CustomField>