force-app/main/default/objects/Opportunity/fields/Type_de_colis__c.field-meta.xml
<CustomField>
    <fullName>Type_de_colis__c</fullName>
    <label>Type de colis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Palette</fullName>
            </value>
            <value>
                <fullName>Conteneur</fullName>
            </value>
            <value>
                <fullName>Colis</fullName>
            </value>
            <value>
                <fullName>Remorque</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>