force-app/main/default/objects/Opportunity/fields/Type_de_vente__c.field-meta.xml
<CustomField>
    <fullName>Type_de_vente__c</fullName>
    <label>Type de vente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>