force-app/main/default/objects/Opportunity/validationRules/Validate_Date_concretisation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Date_concretisation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( $User.Bypass_VR__c ),
 Date_de_concretisation__c  &lt;=  Date_de_debut__c
)</errorConditionFormula>
    <errorMessage>La date de concrétisation doit être supérieure à la date de début.</errorMessage>
</ValidationRule>