force-app/main/default/objects/Opportunity/validationRules/Validate_Motif_de_perte.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Motif_de_perte</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( $User.Bypass_VR__c ),
 ISBLANK( TEXT(Motif_de_perte__c )) ,
 ISPICKVAL(StageName, &quot;Close perdue&quot;)
)</errorConditionFormula>
    <errorMessage>Veuillez renseigner le motif de perte de l&apos;opportunité.</errorMessage>
</ValidationRule>